Fix padding on mobile

--- a/_sass/main/_layout.scss
+++ b/_sass/main/_layout.scss
@@ -3,7 +3,11 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0px;
-    padding: 100px;
+    padding: 10px;
+
+    @include media($sm) {
+        padding: 100px;
+    }
 }
 
 .container {
